06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortener-ingress
  namespace: shortener
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: shortener.latihan.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shortener-svc
            port:
              number: 80
